--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "frozenfroggie",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.15.2"
+    "express": "^4.15.2",
+    "moment": "^2.17.1"
   }
 }
